# supacrypt-ksp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  Installation.cmake  Platform.cmake  ProtoGeneration.cmake  supacrypt-ksp-config.cmake.in
include/: algorithm_provider.h  error_handling.h  grpc_backend.h  key_storage.h  ksp_provider.h  logging.h
src/: CMakeLists.txt  algorithm_provider.cpp  error_handling.cpp  grpc_backend.cpp  key_storage.cpp  ksp_exports.def  ksp_main.cpp  ksp_provider.cpp
tests/: CMakeLists.txt  test_config.h.in
tests/enhanced/: enhanced_unit_tests.cpp
tests/framework/: ksp_test_framework.h
tests/integration/: README.md
tests/integration/scripts/scenarios/: test_iis_integration.ps1
tests/integration/scripts/setup/: configure_iis.ps1  install_ksp_provider.ps1  master_setup.ps1
tests/integration/scripts/validation/: run_full_integration_suite.ps1
tests/scripts/: run_ksp_coverage.ps1
tests/unit/: CMakeLists.txt  test_ksp_provider.cpp
tools/: CMakeLists.txt  install.ps1
